Fix cropped descenders in font on activity list

--- a/app/assets/stylesheets/_app/_community/_partials/_activity_list.sass
+++ b/app/assets/stylesheets/_app/_community/_partials/_activity_list.sass
@@ -29,3 +29,6 @@
 
 .activity-list__time
   margin-left: 20px
+
+.activity-list__message
+  padding-bottom: 2px
